Layout issue in english version

--- a/webfrontend/html/system/css/main.css
+++ b/webfrontend/html/system/css/main.css
@@ -31,7 +31,7 @@ table.menutable td {
 }
 
 .caption {
-  width: 320px;
+  width: 450px;
   font-size: 3em;
   letter-spacing: 0.25em;
   text-align: left;
